--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,5 +19,46 @@ const { title } = Astro.props;
   <body class="bg-white w-full overflow-x-hidden main:h-[5000px]">
     <slot />
     <script src="../scripts/main-gsap.ts"></script>
+    <script src="../scripts/main-script.ts"></script>
   </body>
 </html>
+<style is:global>
+  @font-face {
+    font-family: "MD IO Regular";
+    src: url("./MD IO Trial/MDIOTrial-Regular.otf");
+  }
+
+  @font-face {
+    font-family: "MD IO Semibold";
+    src: url("./MD IO Trial/MDIOTrial-Semibold.otf");
+  }
+
+  @font-face {
+    font-family: "MD IO Bold";
+    src: url("./MD IO Trial/MDIOTrial-Bold.otf");
+  }
+
+  @font-face {
+    font-family: "MD System Medium";
+    src: url("./MD System Trial/MDSystemTrial-Medium.otf");
+  }
+
+  @font-face {
+    font-family: "MD System Black";
+    src: url("./MD System Trial/MDSystemTrial-Black.otf");
+  }
+
+  h4 {
+    @apply font-io-bold font-bold text-[32px];
+  }
+
+  p,
+  span {
+    @apply max-w-[600px] leading-loose;
+    @apply font-system-medium;
+  }
+
+  p {
+    @apply pb-20;
+  }
+</style>
