--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/UX4/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
@@ -23,6 +23,10 @@ const { title } = Astro.props;
   </body>
 </html>
 <style is:global>
+  @font-face {
+    font-family: "MD IO Thin";
+    src: url("/MD IO Trial/MDIOTrial-Thin.otf");
+  }
   @font-face {
     font-family: "MD IO Regular";
     src: url("/MD IO Trial/MDIOTrial-Regular.otf");
@@ -48,8 +52,12 @@ const { title } = Astro.props;
     src: url("/MD System Trial/MDSystemTrial-Black.otf");
   }
 
+  h3 {
+    @apply font-io-regular text-[32px];
+  }
+
   h4 {
-    @apply font-io-bold font-bold text-[32px];
+    @apply font-io-bold text-[25px];
   }
 
   p,
@@ -60,5 +68,9 @@ const { title } = Astro.props;
 
   p {
     @apply pb-20;
+  }
+
+  .visible-page-width {
+    min-width: calc(100vw - 25vh);
   }
 </style>
