--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,37 @@ import Layout from "../layouts/Layout.astro";
 import TitleCard from "../components/TitleCard.astro";
 import Intro from "../components/Intro.astro";
 import Start from "../components/chapters/Start.astro";
+import InitialBrainstorm from "../components/chapters/InitialBrainstorm.astro";
+import TargetAudience from "../components/chapters/TargetAudience.astro";
+import EcosystemMapping from "../components/chapters/EcosystemMapping.astro";
+import TargetAudienceInterview from "../components/chapters/TargetAudienceInterview.astro";
+import DesignPrinciples from "../components/chapters/DesignPrinciples.astro";
+import CompetitorAnalysis from "../components/chapters/CompetitorAnalysis.astro";
+import Alphabet from "../components/chapters/Alphabet.astro";
+import FlippedAssumptions from "../components/chapters/FlippedAssumptions.astro";
+import Biases from "../components/chapters/Biases.astro";
+import Crazy8 from "../components/chapters/Crazy8.astro";
+import RandomWords from "../components/chapters/RandomWords.astro";
+import ConvergingVoting from "../components/chapters/ConvergingVoting.astro";
+import ConvergingPersonas from "../components/chapters/ConvergingPersonas.astro";
+import ConvergingFeatureMatrix from "../components/chapters/ConvergingFeatureMatrix.astro";
+import Goals from "../components/chapters/Goals.astro";
+import WrittenGuidelines from "../components/chapters/WrittenGuidelines.astro";
+import UserScenarios from "../components/chapters/UserScenarios.astro";
+import PrototypeTechnicalLogic from "../components/chapters/PrototypeTechnicalLogic.astro";
+import Prototype1 from "../components/chapters/Prototype1.astro";
+import Prototype2 from "../components/chapters/Prototype2.astro";
+import Prototype3 from "../components/chapters/Prototype3.astro";
+import PrototypeApp from "../components/chapters/PrototypeApp.astro";
+import PrototypeIPad from "../components/chapters/PrototypeIPad.astro";
+import Test1 from "../components/chapters/Test1.astro";
+import Test2 from "../components/chapters/Test2.astro";
+import Test3 from "../components/chapters/Test3.astro";
+import Conclusions from "../components/chapters/Conclusions.astro";
+import Storyboards from "../components/chapters/Storyboards.astro";
+import ProjectPoster from "../components/chapters/ProjectPoster.astro";
+import UserStories from "../components/chapters/UserStories.astro";
+import UserJourneys from "../components/chapters/UserJourneys.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -18,7 +49,38 @@ import Start from "../components/chapters/Start.astro";
     <div id="scroller" class="h-full w-max relative z-10 flex flex-row">
       <TitleCard />
       <Intro />
+      <ProjectPoster />
       <Start />
+      <InitialBrainstorm />
+      <TargetAudience />
+      <EcosystemMapping />
+      <TargetAudienceInterview />
+      <DesignPrinciples />
+      <CompetitorAnalysis />
+      <Alphabet />
+      <FlippedAssumptions />
+      <Biases />
+      <Crazy8 />
+      <RandomWords />
+      <ConvergingVoting />
+      <ConvergingPersonas />
+      <ConvergingFeatureMatrix />
+      <Goals />
+      <WrittenGuidelines />
+      <UserScenarios />
+      <Storyboards />
+      <UserStories />
+      <UserJourneys />
+      <PrototypeTechnicalLogic />
+      <Prototype1 />
+      <Prototype2 />
+      <Prototype3 />
+      <PrototypeApp />
+      <PrototypeIPad />
+      <Test1 />
+      <Test2 />
+      <Test3 />
+      <Conclusions />
     </div>
     <div class="h-full fixed right-0 top-0 translate-x-[50%] z-50">
       <svg
