Fix gsap parallax

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -1,5 +1,9 @@
 ---
+interface Props {
+  gsapId: string;
+}
 
+const { gsapId } = Astro.props;
 ---
 
 <div
@@ -17,7 +21,7 @@
   </div>
   <div class="h-[30px]"></div>
   <div
-    class="parallax-plane-1 title-card-half flex flex-col justify-center items-center"
+    class=`parallax-plane-1-${gsapId} title-card-half flex flex-col justify-center items-center`
   >
     <h4 class="mb-40">Some Guidelines</h4>
     <ul class="guidelines-list flex flex-col gap-40">
