--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,6 +64,10 @@ const { title } = Astro.props;
   span {
     @apply max-w-[600px] leading-loose;
     @apply font-system-medium;
+
+    b {
+      @apply font-system-black;
+    }
   }
 
   p {
