--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,9 +60,13 @@ const { title } = Astro.props;
     @apply font-io-bold text-[25px];
   }
 
+  h5 {
+    @apply font-system-black text-[18px];
+  }
+
   p,
   span {
-    @apply max-w-[600px] leading-loose;
+    @apply max-w-[600px] leading-relaxed;
     @apply font-system-medium;
 
     b {
