--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,4 +1,6 @@
 ---
+import { circleTexts } from "../scripts/services";
+
 interface Props {
   name: string;
   role: string;
@@ -10,7 +12,28 @@ const { name, role, color, size } = Astro.props;
 ---
 
 <div
-  class=`bg-${color} min-w-${size} w-${size} h-${size} aspect-square rounded-full flex justify-center items-center`
+  class=`head bg-${color} min-w-${size} w-${size} h-${size} aspect-square rounded-full flex justify-center items-center relative m-20`
 >
   <img src=`/head-${name.toLowerCase()}.png` />
+
+  <svg
+    class="w-full h-full absolute opacity-0"
+    id="Layer_2"
+    data-name="Layer 2"
+    xmlns="http://www.w3.org/2000/svg"
+    viewBox="0 0 461.49 461.48"
+    ><Fragment set:html={circleTexts[name.toLowerCase()]} /></svg
+  >
 </div>
+<style>
+  .head {
+    &:hover {
+      img {
+        @apply animate-spin-slow;
+      }
+      svg {
+        @apply opacity-100 size-[140%] animate-spin-reverse transition-all duration-300;
+      }
+    }
+  }
+</style>
