--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -14,7 +14,7 @@ const { name, role, color, size } = Astro.props;
 <div
   class=`head bg-${color} min-w-${size} w-${size} h-${size} aspect-square rounded-full flex justify-center items-center relative m-20`
 >
-  <img src=`/head-${name.toLowerCase()}.png` />
+  <img src=`/UX4/head-${name.toLowerCase()}.png` />
 
   <svg
     class="w-full h-full absolute opacity-0"
@@ -22,7 +22,7 @@ const { name, role, color, size } = Astro.props;
     data-name="Layer 2"
     xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 461.49 461.48"
-    ><Fragment set:html={circleTexts[name.toLowerCase()]} /></svg
+    ><Fragment set:html={circleTexts.get(name.toLowerCase())} /></svg
   >
 </div>
 <style>
