--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -36,7 +36,7 @@
           >The website is interactive, so whenever you see this symbol, you can
           hover or click to find out more information.</span
         >
-        <img src="/UX4/interaction.svg" />
+        <img src="./interaction.svg" />
       </li>
       <li>
         <span
@@ -45,7 +45,7 @@
           project. At the end of the timeline, you will find a collection of all
           the Conclusion Boxes spread across the website.</span
         >
-        <img src="/UX4/conclusionBox.svg" />
+        <img src="./conclusionBox.svg" />
       </li>
     </ul>
   </div>
