--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,11 +21,6 @@ import Goals from "../components/chapters/Goals.astro";
 import WrittenGuidelines from "../components/chapters/WrittenGuidelines.astro";
 import UserScenarios from "../components/chapters/UserScenarios.astro";
 import PrototypeTechnicalLogic from "../components/chapters/PrototypeTechnicalLogic.astro";
-import Prototype1 from "../components/chapters/Prototype1.astro";
-import Prototype2 from "../components/chapters/Prototype2.astro";
-import Prototype3 from "../components/chapters/Prototype3.astro";
-import PrototypeApp from "../components/chapters/PrototypeApp.astro";
-import PrototypeIPad from "../components/chapters/PrototypeIPad.astro";
 import Test1 from "../components/chapters/Test1.astro";
 import Test2 from "../components/chapters/Test2.astro";
 import Test3 from "../components/chapters/Test3.astro";
@@ -34,6 +29,16 @@ import Storyboards from "../components/chapters/Storyboards.astro";
 import ProjectPoster from "../components/chapters/ProjectPoster.astro";
 import UserStories from "../components/chapters/UserStories.astro";
 import UserJourneys from "../components/chapters/UserJourneys.astro";
+import Heads from "../components/chapters/Heads.astro";
+import PrototypeLights from "../components/chapters/PrototypeLights.astro";
+import PrototypePaper from "../components/chapters/PrototypePaper.astro";
+import PrototypeSound from "../components/chapters/PrototypeSound.astro";
+import WireflowsIpad from "../components/chapters/WireflowsIpad.astro";
+import WireflowsApp from "../components/chapters/WireflowsApp.astro";
+import PrototypeIpadPaper from "../components/chapters/PrototypeIpadPaper.astro";
+import PrototypeAppPaper from "../components/chapters/PrototypeAppPaper.astro";
+import PrototypeIpadFigma from "../components/chapters/PrototypeIpadFigma.astro";
+import PrototypeAppFigma from "../components/chapters/PrototypeAppFigma.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -53,8 +58,8 @@ import UserJourneys from "../components/chapters/UserJourneys.astro";
     >
       <TitleCard />
       <Intro />
-      <ProjectPoster />
       <Start />
+      <ProjectPoster />
       <InitialBrainstorm />
       <TargetAudience />
       <EcosystemMapping />
@@ -67,20 +72,25 @@ import UserJourneys from "../components/chapters/UserJourneys.astro";
       <Crazy8 />
       <RandomWords />
       <ConvergingVoting />
-      <ConvergingPersonas />
-      <ConvergingFeatureMatrix />
       <Goals />
-      <WrittenGuidelines />
+      <ConvergingPersonas />
       <UserScenarios />
+      <ConvergingFeatureMatrix />
+      <Heads />
+      <WrittenGuidelines />
       <Storyboards />
       <UserStories />
       <UserJourneys />
       <PrototypeTechnicalLogic />
-      <Prototype1 />
-      <Prototype2 />
-      <Prototype3 />
-      <PrototypeApp />
-      <PrototypeIPad />
+      <PrototypePaper />
+      <PrototypeLights />
+      <PrototypeSound />
+      <WireflowsIpad />
+      <PrototypeIpadPaper />
+      <PrototypeIpadFigma />
+      <WireflowsApp />
+      <PrototypeAppPaper />
+      <PrototypeAppFigma />
       <Test1 />
       <Test2 />
       <Test3 />
