--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,10 +52,7 @@ import PrototypeAppFigma from "../components/chapters/PrototypeAppFigma.astro";
       <div class="bg-white w-full grow"></div>
     </div>
     <div class="min-w-full h-full"></div>
-    <div
-      id="scroller"
-      class="h-full w-max relative z-10 flex flex-row pr-[25vh]"
-    >
+    <div id="scroller" class="h-full relative z-10 flex flex-row pr-[25vh]">
       <TitleCard />
       <Intro />
       <Start />
