--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -3,16 +3,15 @@ import { circleTexts } from "../scripts/services";
 
 interface Props {
   name: string;
-  role: string;
   color: "green" | "orange" | "grey" | "blue";
   size: "130" | "90";
 }
 
-const { name, role, color, size } = Astro.props;
+const { name, color, size } = Astro.props;
 ---
 
 <div
-  class=`head bg-${color} min-w-${size} w-${size} h-${size} aspect-square rounded-full flex justify-center items-center relative m-20`
+  class=`head bg-${color} min-w-${size} w-${size} h-${size} aspect-square rounded-full flex justify-center items-center relative`
 >
   <img src=`./head-${name.toLowerCase()}.png` />
 
@@ -28,6 +27,8 @@ const { name, role, color, size } = Astro.props;
 <style>
   .head {
     &:hover {
+      @apply z-50;
+
       img {
         @apply animate-spin-slow;
       }
