--- a/src/components/ConclusionBox.astro
+++ b/src/components/ConclusionBox.astro
@@ -10,7 +10,7 @@ const { id, chapter, black } = Astro.props;
 
 <div
   id=`conclusion-box-${id}-${chapter}`
-  class=`absolute min-w-[800px] bg-${black? "grey": "white"} text-${black? "white": "grey"} flex flex-col p-20 gap-10 rounded-tr-[50px]`
+  class=`relative min-w-[800px] bg-${black? "grey": "white"} text-${black? "white": "grey"} flex flex-col p-20 gap-10 rounded-tr-[50px]`
 >
   <span class="font-io-bold text-pink text-xl">Conclusion Box</span>
   <div class="relative z-20 max-w-[500px]">
