Target audience interviews

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -81,4 +81,8 @@ const { title } = Astro.props;
   .chapter {
     @apply min-w-[1000px];
   }
+
+  a {
+    @apply font-system-black text-orange;
+  }
 </style>
