--- a/src/components/ChapterHead.astro
+++ b/src/components/ChapterHead.astro
@@ -23,10 +23,10 @@ const { title, bottom, height } = Astro.props;
 </div>
 <style>
   .top {
-    bottom: calc(50vh + 15px);
+    bottom: calc(50% + 15px);
   }
 
   .bottom {
-    top: calc(50vh + 15px);
+    top: calc(50% + 15px);
   }
 </style>
