changes to paths

--- a/src/components/TitleCard.astro
+++ b/src/components/TitleCard.astro
@@ -20,7 +20,7 @@
     class=`parallax-plane-1-title-card title-card-half font-semibold flex flex-col justify-center items-center`
   >
     <h2 class="font-io-semibold text-grey text-4xl">
-      By Elie, Marats, Ella & Adam
+      By Ele, Marats, Ella & Adam
     </h2>
   </div>
 </div>
