--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,31 +25,31 @@ const { title } = Astro.props;
 <style is:global>
   @font-face {
     font-family: "MD IO Thin";
-    src: url("/MD IO Trial/MDIOTrial-Thin.otf");
+    src: url("../MD IO Trial/MDIOTrial-Thin.otf");
   }
   @font-face {
     font-family: "MD IO Regular";
-    src: url("/MD IO Trial/MDIOTrial-Regular.otf");
+    src: url("../MD IO Trial/MDIOTrial-Regular.otf");
   }
 
   @font-face {
     font-family: "MD IO Semibold";
-    src: url("/MD IO Trial/MDIOTrial-Semibold.otf");
+    src: url("../MD IO Trial/MDIOTrial-Semibold.otf");
   }
 
   @font-face {
     font-family: "MD IO Bold";
-    src: url("/MD IO Trial/MDIOTrial-Bold.otf");
+    src: url("../MD IO Trial/MDIOTrial-Bold.otf");
   }
 
   @font-face {
     font-family: "MD System Medium";
-    src: url("/MD System Trial/MDSystemTrial-Medium.otf");
+    src: url("../MD System Trial/MDSystemTrial-Medium.otf");
   }
 
   @font-face {
     font-family: "MD System Black";
-    src: url("/MD System Trial/MDSystemTrial-Black.otf");
+    src: url("../MD System Trial/MDSystemTrial-Black.otf");
   }
 
   h3 {
