--- a/src/components/PostIt.astro
+++ b/src/components/PostIt.astro
@@ -6,14 +6,15 @@ interface Props {
   stay: boolean;
   chapter: string;
   text: string;
+  relative?: boolean;
 }
 
-const { name, color, stay, chapter, id, text } = Astro.props;
+const { name, color, stay, chapter, id, text, relative } = Astro.props;
 ---
 
 <div
   id=`post-it-${id}-${chapter}`
-  class=`post-it-${chapter} ${stay ? "staying" : ""} absolute bg-${color} w-250 h-250 max-w-250 max-h-250 rounded-br-[150px] p-20 pb-40 pr-40`
+  class=`post-it-${chapter} ${stay ? "staying" : ""} ${relative ? "relative" : "absolute"} bg-${color} w-250 h-250 min-w-250 min-h-250 max-w-250 max-h-250 rounded-br-[150px] p-20 pb-40 pr-40`
 >
   <p
     class=`${color === "grey" || color === "blue" ? "text-white" : ""} overflow-hidden max-h-full max-w-full`
