--- a/src/components/PostIt.astro
+++ b/src/components/PostIt.astro
@@ -3,7 +3,7 @@ interface Props {
   name: "adam" | "ele" | "ella" | "marats";
   color: "green" | "orange" | "grey" | "blue" | "white";
   id: number;
-  stay: boolean;
+  stay?: boolean;
   chapter: string;
   text: string;
   relative?: boolean;
