--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -5,13 +5,17 @@ interface Props {
   name: string;
   color: "green" | "orange" | "grey" | "blue";
   size: "130" | "90";
+  noInteraction?: boolean;
+  id: number;
+  chapter: string;
 }
 
-const { name, color, size } = Astro.props;
+const { id, chapter, name, color, size, noInteraction } = Astro.props;
 ---
 
 <div
-  class=`head bg-${color} min-w-${size} w-${size} h-${size} aspect-square rounded-full flex justify-center items-center relative`
+  id=`head-${id}-${chapter}`
+  class=`head bg-${color} min-w-${size} w-${size} h-${size} ${noInteraction ? "" : "interaction"} aspect-square rounded-full flex justify-center items-center relative`
 >
   <img src=`./head-${name.toLowerCase()}.png` />
 
@@ -26,7 +30,7 @@ const { name, color, size } = Astro.props;
 </div>
 <style>
   .head {
-    &:hover {
+    &.interaction:hover {
       @apply z-50;
 
       img {
