--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Storyboards from "../components/chapters/Storyboards.astro";
 import ProjectPoster from "../components/chapters/ProjectPoster.astro";
 import UserStories from "../components/chapters/UserStories.astro";
 import UserJourneys from "../components/chapters/UserJourneys.astro";
-import Heads from "../components/chapters/Heads.astro";
+import Heads from "../components/chapters/Letters.astro";
 import PrototypeLights from "../components/chapters/PrototypeLights.astro";
 import PrototypePaper from "../components/chapters/PrototypePaper.astro";
 import PrototypeSound from "../components/chapters/PrototypeSound.astro";
@@ -39,6 +39,7 @@ import PrototypeIpadPaper from "../components/chapters/PrototypeIpadPaper.astro"
 import PrototypeAppPaper from "../components/chapters/PrototypeAppPaper.astro";
 import PrototypeIpadFigma from "../components/chapters/PrototypeIpadFigma.astro";
 import PrototypeAppFigma from "../components/chapters/PrototypeAppFigma.astro";
+import Letters from "../components/chapters/Letters.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -76,7 +77,7 @@ import PrototypeAppFigma from "../components/chapters/PrototypeAppFigma.astro";
       <ConvergingPersonas />
       <UserScenarios />
       <ConvergingFeatureMatrix />
-      <Heads />
+      <Letters />
       <WrittenGuidelines />
       <Storyboards />
       <UserStories />
