--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,8 +81,8 @@ import Letters from "../components/chapters/Letters.astro";
       <WrittenGuidelines />
       <Storyboards />
       <UserStories />
-      <UserJourneys />
-      <PrototypeTechnicalLogic />
+      <!-- <UserJourneys />
+      <PrototypeTechnicalLogic /> -->
       <PrototypePaper />
       <PrototypeLights />
       <PrototypeSound />
