--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,6 @@ import Storyboards from "../components/chapters/Storyboards.astro";
 import ProjectPoster from "../components/chapters/ProjectPoster.astro";
 import UserStories from "../components/chapters/UserStories.astro";
 import UserJourneys from "../components/chapters/UserJourneys.astro";
-import Heads from "../components/chapters/Letters.astro";
 import PrototypeLights from "../components/chapters/PrototypeLights.astro";
 import PrototypePaper from "../components/chapters/PrototypePaper.astro";
 import PrototypeSound from "../components/chapters/PrototypeSound.astro";
@@ -92,9 +91,9 @@ import Letters from "../components/chapters/Letters.astro";
       <WireflowsApp />
       <PrototypeAppPaper />
       <PrototypeAppFigma />
-      <Test1 />
+      <!-- <Test1 />
       <Test2 />
-      <Test3 />
+      <Test3 /> -->
       <Conclusions />
     </div>
     <div class="h-full fixed right-0 top-0 translate-x-[50%] z-50">
