--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,9 +21,6 @@ import Goals from "../components/chapters/Goals.astro";
 import WrittenGuidelines from "../components/chapters/WrittenGuidelines.astro";
 import UserScenarios from "../components/chapters/UserScenarios.astro";
 import PrototypeTechnicalLogic from "../components/chapters/PrototypeTechnicalLogic.astro";
-import Test1 from "../components/chapters/Test1.astro";
-import Test2 from "../components/chapters/Test2.astro";
-import Test3 from "../components/chapters/Test3.astro";
 import Conclusions from "../components/chapters/Conclusions.astro";
 import Storyboards from "../components/chapters/Storyboards.astro";
 import ProjectPoster from "../components/chapters/ProjectPoster.astro";
@@ -44,7 +41,7 @@ import Letters from "../components/chapters/Letters.astro";
 <Layout title="Welcome to Astro.">
   <main
     id="main"
-    class="hidden main:flex flex-row items-center w-full h-screen overflow-y-hidden overflow-x-clip relative"
+    class="hidden main:flex flex-row items-center w-full h-screen overflow-y-hidden overflow-x-clip relative text-grey"
   >
     <div class="left-0 top-0 w-full h-full flex flex-col absolute z-0">
       <div class="bg-blue w-full grow"></div>
