--- a/src/components/PostIt.astro
+++ b/src/components/PostIt.astro
@@ -1,6 +1,6 @@
 ---
 interface Props {
-  name: "adam" | "ele" | "ella" | "marats";
+  name?: "adam" | "ele" | "ella" | "marats";
   color: "green" | "orange" | "grey" | "blue" | "white";
   id: number;
   stay?: boolean;
@@ -24,6 +24,6 @@ const { name, color, stay, chapter, id, text, relative } = Astro.props;
   <div
     class=`absolute bottom-0 right-0 w-90 h-90 rounded-full p-10 flex justify-center items-center bg-${color === "grey" ? "green" : "orange"}`
   >
-    <img src=`./head-${name.toLowerCase()}.png` />
+    {name && <img src=`./head-${name.toLowerCase()}.png` />}
   </div>
 </div>
