--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,6 +36,7 @@ import PrototypeAppPaper from "../components/chapters/PrototypeAppPaper.astro";
 import PrototypeIpadFigma from "../components/chapters/PrototypeIpadFigma.astro";
 import PrototypeAppFigma from "../components/chapters/PrototypeAppFigma.astro";
 import Letters from "../components/chapters/Letters.astro";
+import ConvergingChili from "../components/chapters/ConvergingChili.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -58,25 +59,26 @@ import Letters from "../components/chapters/Letters.astro";
       <Start />
       <ProjectPoster />
       <InitialBrainstorm />
+      <CompetitorAnalysis />
       <TargetAudience />
       <EcosystemMapping />
       <TargetAudienceInterview />
       <DesignPrinciples />
-      <CompetitorAnalysis />
       <Alphabet />
       <FlippedAssumptions />
       <Biases />
       <Crazy8 />
       <RandomWords />
       <ConvergingVoting />
+      <ConvergingChili />
       <Goals />
       <ConvergingPersonas />
       <UserScenarios />
+      <UserStories />
       <ConvergingFeatureMatrix />
       <Letters />
       <WrittenGuidelines />
       <Storyboards />
-      <UserStories />
       <!-- <UserJourneys />
       <PrototypeTechnicalLogic /> -->
       <PrototypePaper />
@@ -88,9 +90,6 @@ import Letters from "../components/chapters/Letters.astro";
       <WireflowsApp />
       <PrototypeAppPaper />
       <PrototypeAppFigma />
-      <!-- <Test1 />
-      <Test2 />
-      <Test3 /> -->
       <Conclusions />
     </div>
     <div class="h-full fixed right-0 top-0 translate-x-[50%] z-50">
