--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import Letters from "../components/chapters/Letters.astro";
 import ConvergingChili from "../components/chapters/ConvergingChili.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="UX4">
   <main
     id="main"
     class="hidden main:flex flex-row items-center w-full h-screen overflow-y-hidden overflow-x-clip relative text-grey"
