--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -42,8 +42,7 @@
         <span
           >This is called a Conclusion Box. Whatever is written in there is a
           conclusion we drew and took with us throughout the rest of the
-          project. At the end of the timeline, you will find a collection of all
-          the Conclusion Boxes spread across the website.</span
+          project.</span
         >
         <img src="./conclusionBox.svg" />
       </li>
